# PyTorch_To_Bare_TensorRT_MNIST

./: .gitignore  CMakeLists.txt  README.md  check_cpp_tensor.py  main.cpp  train.py
.devcontainer/: Dockerfile  devcontainer.json
tools/: save_test_img.py
